# Geometry

./: README.md  curves.py  distributions.py  pyproject.toml
geometry/: convert.py  curves.py  grid.py  surfaces.py
tests/: test_distributions.py
